--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
 
+@use '@angular/material' as mat;
+
+$my-custom-typography: mat.define-typography-config(
+  $headline:  mat.define-typography-level(
+    $font-family: Arial,
+    $font-weight: 700,
+    $font-size: 1.5rem,
+    $line-height: 1,
+    $letter-spacing: normal
+    ),
+);
+
+@include mat.core($my-custom-typography);
+
 html {
     width: 100%;
     height: 100%;
