Fixed plant info updating

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,5 +1,5 @@
 <div class="header" role="banner">
-    <h1>Team 80 Map</h1>
+    <h1>Renewable Energy Replacement Geomap Visualization</h1>
 </div>
 
 <mgl-map
