--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -2,7 +2,7 @@
     background-color: lightgray;
     border-left: 1px solid rgba($color: #333, $alpha: 0.2);
     #sidebar-container {
-        padding: 10px 30px 10px 30px;
+        padding: 5px;
 
         .title {
             text-align: center;
