--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,44 +1,47 @@
 <div id="sidebar-container">
-    
-    <div style="border: 1px solid #777; padding: 10px;">
-        <h2 class="title">Controls</h2>
-        <hr />
+    <mat-card>
+        <mat-card-title>Controls</mat-card-title>
+        <mat-divider inset></mat-divider>
+        <mat-card-content>
+            <label>Power Plant Filter</label>
+            <mat-form-field appearance="fill">
+                <mat-label>Power Plant Filter</mat-label>
+                <mat-select [formControl]="fuelFilterFormControl" #fuelselect multiple>
+                    <mat-select-trigger>
+                        {{fuelFilterFormControl.value ? fuelFilterFormControl.value[0] : ''}}
+                        <span *ngIf="fuelFilterFormControl.value?.length > 1">
+                            (+{{fuelFilterFormControl.value.length - 1}} {{fuelFilterFormControl.value?.length === 2 ?
+                            'other' :
+                            'others'}})
+                        </span>
+                    </mat-select-trigger>
+                    <div class="select-all">
+                        <mat-checkbox [(ngModel)]="fuelAllSelected" [ngModelOptions]="{standalone: true}"
+                            (change)="fuelOptionToggleAllSelection()">Select All</mat-checkbox>
+                    </div>
+                    <mat-option *ngFor="let primaryFuel of mainServiceService.allFuels" [value]="primaryFuel"
+                        (click)="fuelOptionClick()">{{primaryFuel}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </mat-card-content>
+    </mat-card>
 
-        <h4>Power Plant Filter</h4>
-        <mat-form-field appearance="fill">
-            <mat-label>Power Plant Filter</mat-label>
-            <mat-select [formControl]="fuelFilterFormControl" #fuelselect
-                multiple>
-                <mat-select-trigger>
-                    {{fuelFilterFormControl.value ? fuelFilterFormControl.value[0] : ''}}
-                    <span *ngIf="fuelFilterFormControl.value?.length > 1">
-                        (+{{fuelFilterFormControl.value.length - 1}} {{fuelFilterFormControl.value?.length === 2 ? 'other' :
-                        'others'}})
-                    </span>
-                </mat-select-trigger>
-                <div class="select-all">
-                    <mat-checkbox [(ngModel)]="fuelAllSelected" [ngModelOptions]="{standalone: true}"
-                        (change)="fuelOptionToggleAllSelection()">Select All</mat-checkbox>
-                </div>
-                <mat-option *ngFor="let primaryFuel of mainServiceService.allFuels" [value]="primaryFuel" (click)="fuelOptionClick()">{{primaryFuel}}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
-    </div>
-    <br />
-    <div style="border: 1px solid #777; padding: 10px;">
-        <h2 class="title">PowerPlantInfo</h2>
-        <hr />
-        <div *ngIf="mainServiceService.clickedPowerPlantInfoObservable | async as powerPlantInfo; else loading">
-            <ng-container *ngFor="let item of powerPlantInfo | keyvalue">
-                <h5>{{item.key}}</h5>
-                <p>
-                    {{item.value}}
-                </p>
-            </ng-container>
-        </div>
-        <ng-template #loading>
-            Select a power plant for data
-        </ng-template>
-    </div>
+    <mat-card>
+        <mat-card-title>Power Plant Info</mat-card-title>
+        <mat-divider inset></mat-divider>
+        <mat-card-content>
+            <div *ngIf="mainServiceService.clickedPowerPlantInfoObservable | async as powerPlantInfo; else loading">
+                <ng-container *ngFor="let item of powerPlantInfo | keyvalue">
+                    <label>{{item.key}}</label>
+                    <p>
+                        {{item.value}}
+                    </p>
+                </ng-container>
+            </div>
+            <ng-template #loading>
+                Select a power plant for data
+            </ng-template>
+        </mat-card-content>
+    </mat-card>
 </div>
