--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,22 +7,31 @@
     -moz-osx-font-smoothing: grayscale;
 
     display: flex;
-    flex-direction: column;
-    align-items: stretch;
     width: 100%;
     height: 100%;
     
     .content {
-        flex-grow: 1;
-        display: flex;
-        flex-direction: row;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
     
         app-map {
-            flex-grow: 1;
+            width: 100%;
+            height: 100%;
         }
         
-        app-sidebar {
+        mat-sidenav {
             width: 20%;
+            min-width: 250px;
+            max-width: 400px;
+            border-left: 1px solid rgba($color: #333, $alpha: 0.2);
+
+            app-sidebar {
+                width: 100%;
+                height: 100%;
+            }
         }
     }
 }
