--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -13,14 +13,14 @@
         position: absolute;
         top: 0;
         left: 0;
-        z-index: 1;
+        z-index: 3;
         font-weight: 600;
         color: white;
         -webkit-text-stroke: 1px rgba($color: #333, $alpha: 2);
         text-align: center;
         
         h1 {
-            font-size: 1.5rem;
+            font-size: rem;
         }
     }
 }
