--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -21,6 +21,10 @@
                 .mat-form-field {
                     width: 100%;
                 }
+
+                .compute-button {
+                    width: 100%;
+                }
             }
         }
     }
