--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -3,6 +3,7 @@
     background-color: rgb(229, 229, 229);
     width: 100%;
     height: 100%;
+    overflow-y: auto;
 
     #sidebar-container {
         background-color: rgb(229, 229, 229);
