Improved visualization due to comments from surveys

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,3 +41,11 @@ app-root {
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.help {
+    font-size: 10pt;
+}
+
+.tooltip {
+    font-size: 12pt;
+}
