--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -19,7 +19,7 @@
                         <mat-checkbox [(ngModel)]="fuelAllSelected" [ngModelOptions]="{standalone: true}"
                             (change)="fuelOptionToggleAllSelection()">Select All</mat-checkbox>
                     </div>
-                    <mat-option *ngFor="let primaryFuel of mainServiceService.allFuels" [value]="primaryFuel"
+                    <mat-option *ngFor="let primaryFuel of allFuels" [value]="primaryFuel"
                         (click)="fuelOptionClick()">{{primaryFuel}}
                     </mat-option>
                 </mat-select>
@@ -31,17 +31,38 @@
         <mat-card-title>Power Plant Info</mat-card-title>
         <mat-divider inset></mat-divider>
         <mat-card-content>
-            <div *ngIf="this.selectedPowerPlant else loading">
-                <ng-container *ngFor="let item of this.selectedPowerPlant | keyvalue">
-                    <label>{{item.key}}</label>
-                    <p>
-                        {{item.value}}
-                    </p>
-                </ng-container>
+            <div *ngIf="selectedPowerPlant else loading">
+
+    
+                <label>Name</label>
+                <p>
+                    {{selectedPowerPlant.name}}
+                </p>
+
+                <label>Primary Fuel</label>
+                <p>
+                    {{selectedPowerPlant.primary_fuel}}
+                </p>
+
+                <label>Capacity <mat-icon class="help" matTooltip="Amount of energy the power plant produces in Megawatts" matTooltipPosition="above" matTooltipClass="tooltip">help</mat-icon></label>
+                <p>
+                    {{selectedPowerPlant.capacity_mw}} mw ({{selectedPowerPlant.capacity_mw * 1000 / 1.5643835616438356164383561643836 | number : '1.0-0'}} homes)
+                </p>
+
+                <label>Owner</label>
+                <p>
+                    {{selectedPowerPlant.owner}}
+                </p>
+
+                <label>Commissioning Year <mat-icon class="help" matTooltip="Year the plant went operational" matTooltipPosition="above" matTooltipClass="tooltip">help</mat-icon></label>
+                <p>
+                    {{selectedPowerPlant.commissioning_year | date : 'y'}}
+                </p>
+    
                 <mat-divider inset></mat-divider>
                 <form>
                     <div>
-                        <span>Search Grid Size: {{radius}} km x {{radius}} km </span>
+                        <span>Search Grid Size: {{radius}} km x {{radius}} km <mat-icon class="help" matTooltip="Radius constraint to use for computing the optimal power plant replacement and its location" matTooltipPosition="above" matTooltipClass="tooltip">help</mat-icon></span>
                     </div>
                     <mat-slider
 
@@ -54,7 +75,7 @@
                         (change)="radiusChange($event)"
                         style="width: 100%;">
                     </mat-slider>
-                    <button mat-flat-button class="compute-button" color="primary" (click)="computeRenewableAlternativesClick()">Compute Renewable Alternatives</button>
+                    <button mat-flat-button class="compute-button" color="primary" (click)="computeRenewableAlternativesClick()" matTooltip="Computes a solar or wind power plant to replace the currently selected power plant. Replacement powerplant will have the same capacity as the original power plant. Suggestion will be displayed as a green dot." matTooltipClass="tooltip">Compute Renewable Alternatives</button>
                 </form>
             </div>
             <ng-template #loading>
@@ -71,21 +92,21 @@
             <p>
                 {{recommendedPlant.primaryFuelRecommendation}}
             </p>
-            <label>Latitude</label>
+            <label>Lat/Long <mat-icon class="help" matTooltip="Lattitude and Longitude of the plant in degrees" matTooltipPosition="above" matTooltipClass="tooltip">help</mat-icon></label>
             <p>
-                {{recommendedPlant.latitude}}
+                ({{recommendedPlant.latitude}}, {{recommendedPlant.longitude}})
             </p>
-            <label>Longitude</label>
+            <label>Cost (cents per kwh)</label>
             <p>
-                {{recommendedPlant.longitude}}
+                {{recommendedPlant.centsPerKwh | number : '1.2-2'}} &#162;/kwh;
             </p>
-            <label>Yearly profit / MW</label>
+            <label>Yearly profit</label>
             <p>
-                {{recommendedPlant.yearlyProfitPerMW}}
+                {{recommendedPlant.yearlyProfitPerMW * selectedPowerPlant.capacity_mw | currency}}
             </p>
-            <label>Cents / Kwh</label>
+            <label>Yearly cost</label>
             <p>
-                {{recommendedPlant.centsPerKwh}}
+                {{recommendedPlant.centsPerKwh * (selectedPowerPlant.capacity_mw * 1000) / 100 | currency}}
             </p>
         </mat-card-content>
     </mat-card>
